fdo#64962 - ignore exceptions from checking with the update service.

Change-Id: If627b303f8710b915dcbdcb899454631f607e217